# payout-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/apps/payouts/: apps.py  serializers.py  signals.py  tasks.py  urls.py  views.py
src/apps/payouts/migrations/: 0001_initial.py
src/apps/payouts/models/: payout.py
src/apps/payouts/tests/: conftest.py  test_models.py  test_patch_views.py  test_tasks.py  test_views.py
src/config/: celery.py  settings.py  urls.py
src/core/: views.py
